[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tools"
authors = [{name = "akitenkrad", email = "akitenkrad@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "click>=8.0.3"
]

[project.scripts]
tools = 'tools.cli:cli'