[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tools"
description = "tools for data science"
version = "0.1.0"
authors = [
  {name = "akitenkrad", email = "akitenkrad@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.8"

dependencies = [
    "click",
    "numpy",
    "pandas",
    "PyYAML",
    "toml",
    "py-cpuinfo"
]

[project.scripts]
tools = 'tools.cli:cli'
